# orkh

./: Cargo.toml  README.md  setup.sh
src/: lib.rs  main.rs
src/config/: applicator.rs  mod.rs  parser.rs  watchers.rs
src/keyboard/: listener.rs  mod.rs
