[package]
name = "orkh"
version = "0.1.0"
edition = "2021"

[dependencies]
openrgb2 = "0.3"
tokio = { version = "1", features = ["full"] }
evdev = "0.13.2"
yaml-rust2 = "0.11.0"
notify = "8.2.0"
serde =  { version = "1.0.228", features = ["derive"] }
libc = "0.2.180"
nix = { version = "0.30.1", features = ["user"] }
